jlamontSC-test/src/objects/Merge_Request__c.object
<CustomObject>
    <fields>
        <fullName>Date_Last_Step_Completed__c</fullName>
        <label>Date Last Step Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Error__c</fullName>
        <formula>LEN(Error_Message__c) &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Step_Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Step Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merge_Complete__c</fullName>
        <formula>Last_Step_Completed__c = 6 &amp;&amp; LEN( Error_Message__c ) = 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_Type__c</fullName>
        <formula>IF(Previous_Contact__c = null, &quot;Account&quot;, &quot;Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merge Requests (Previous Account)</relationshipLabel>
        <relationshipName>Merge_Requests_Previous_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Account__c</fullName>
        <label>Previous Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Contact_ID_Case_Safe__c</fullName>
        <formula>CASESAFEID( Previous_Contact__c )</formula>
        <label>Previous Contact ID (Case Safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Contact_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Merge Requests (Previous Contact)</relationshipLabel>
        <relationshipName>Merge_Requests_Previous_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Contact__c</fullName>
        <label>Previous Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_and_Retained_Account_Match__c</fullName>
        <formula>Previous_Account_Lookup__r.Id  =  Retained_Account_Lookup__r.Id</formula>
        <label>Previous and Retained Account Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retained_Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retained Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merge Requests (Retained Account)</relationshipLabel>
        <relationshipName>Merge_Requests_Retained_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retained_Account__c</fullName>
        <label>Retained Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retained_Accounts_Match__c</fullName>
        <formula>LEFT(Retained_Account__c,15) = LEFT(Retained_Account_Lookup__r.Id,15)</formula>
        <label>Retained Accounts Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retained_Contact_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retained Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Merge Requests (Retained Contact)</relationshipLabel>
        <relationshipName>Merge_Requests_Retained_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retained_Contact__c</fullName>
        <label>Retained Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retained_Contacts_Match__c</fullName>
        <formula>LEFT(Retained_Contact__c,15) = LEFT(Retained_Contact_Lookup__r.Id,15)</formula>
        <label>Retained Contacts Match</label>
        <type>Checkbox</type>
    </fields>
    <label>Merge Request</label>
    <nameField>
        <displayFormat>MR-{00000000}</displayFormat>
        <label>Merge Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>